@@ -19,6 +19,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12451: pydoc: importfile() now opens the Python script in binary mode,
+  instead of text mode using the locale encoding, to avoid encoding issues.
+
 - Issue #12451: runpy: run_path() now opens the Python script in binary mode,
   instead of text mode using the locale encoding, to support other encodings
   than UTF-8 (scripts using the coding cookie).
